--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,4 +17,14 @@ services:
       <<: *common-variables
     ports:
       - "8080:8080"
-
+  axonserver:
+    image: axoniq/axonserver
+    hostname: axonserver
+    volumes:
+      - ./axon-data/data:/data
+      - ./axon-data/eventdata:/eventdata
+      - ./axon-data/config:/config:ro
+    ports:
+      - '8024:8024'
+      - '8124:8124'
+      - '8224:8224'
