--- a/product-service/src/main/resources/application.yml
+++ b/product-service/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
   jpa:
     database: h2
     database-platform: org.hibernate.dialect.H2Dialect
-    show_sql: true
+#    show_sql: true
     generate-ddl: false
     hibernate:
       ddl-auto: create-drop
@@ -24,7 +24,7 @@ spring:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
       properties:
         hibernate.cache.use_query_cache: false
-        hibernate.generate_statistics: true
+#        hibernate.generate_statistics: true
   h2:
     console:
       enabled: true
