--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,18 +5,18 @@ x-common-variables: &common-variables
   eureka.instance.non-secure-port: 8080
 
 services:
-  eureka:
-    image: "dhananjay12/cqrs-eureka-server:latest"
-    environment:
-      <<: *common-variables
-    ports:
-      - "8761:8080"
-  gateway:
-    image: "dhananjay12/cqrs-gateway:latest"
-    environment:
-      <<: *common-variables
-    ports:
-      - "8080:8080"
+#  eureka:
+#    image: "dhananjay12/cqrs-eureka-server:latest"
+#    environment:
+#      <<: *common-variables
+#    ports:
+#      - "8761:8080"
+#  gateway:
+#    image: "dhananjay12/cqrs-gateway:latest"
+#    environment:
+#      <<: *common-variables
+#    ports:
+#      - "8080:8080"
   axonserver:
     image: axoniq/axonserver
     hostname: axonserver
